# SpeedRead

./: .gitignore  LICENSE.md  README.md  TEST_SUMMARY.md  pyproject.toml  pytest.ini  requirements.txt
.github/: copilot-instructions.md
scripts/: run_tests.py
src/: __init__.py  main.py
src/app/: __init__.py  gui.py  text_extractor.py
tests/: README.md  __init__.py  test_text_extractor.py
